website_practice/RWD_style.css
/* ... */
.learning-path-title h2::after {
    display: none;
}

.learning-path-title h2 {
    text-align: left;
    padding-left: 5px;
}
.learning-path-title p {
    padding-left: 5px;
}
.learning-path-content .card {
    margin: auto;
    width: 450px;
    border: 1px solid #ddd;
    border-radius: 0.25em;
    box-sizing: border-box;
    margin-bottom: 20px;
}
.learning-path-content .card-title.coding {
    border-top-left-radius: 0.25em;
    border-top-right-radius: 0.25em;
    height: 200px;
    position: relative;
}
.learning-path-content .card-title.camp{
    border-top-left-radius: 0.25em;
    border-top-right-radius: 0.25em;
    height: 200px;
    position: relative;
}
.learning-path-content .card-title h3 {
    font-size: 30px;
    text-align: center;
    color: #fff;
    background-color: #00000066;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 50px 0;
}
.learning-path-content .card-content.coding {
    padding: 15px;
    position: relative;
    top: 0px;
    background-color: #fff;
}
.learning-path-content .card-content.camp {
    padding: 15px;
    position: relative;
    top: 0px;
    background-color: #fff;
}
.learning-path-content .card-content h3 {
    border-bottom: 1px solid #666;
    font-size: 20px;
}
.learning-path-content  p {
    padding-top: 15px;
}
.learning-path-content .card-foot {
    padding: 10px;
    width: 80px;
    position: relative;
}
.learning-path-content .card-foot p {
    display: inline-block;
    padding-right: 1px;
    padding-top: 5px;
    position: relative;
    color: #f55;
}
.learning-path-content .card-foot svg {
    position: absolute;
    right: 0px;
    bottom: 6px;
    width: 30px;
    height: 30px;
    color: #f55;
}
.learning-path-content .card-foot a:hover p {
    text-decoration: underline;
}
.learning-path-content .card-foot a:hover svg {
    color: #f55;
    text-decoration: none;
    right: -5px;
}

.feedback {
    margin-top: 50px;
}
.feedback-title {
    margin-bottom: 20px;
}
.feedback .card {
    width: 321.333333px;
    box-sizing: border-box;
    border: 1px solid #dddddddd;
    border-radius: 0.25em;
    padding: 20px;
    position: relative;
    margin: auto;
    margin-bottom: 20px;
}

.feedback .card::before {
    content: "，";
    font-size: 80px;
    position: absolute;
    height: 50px;
    width: 50px;
    bottom: 50px;
    right: 25px;
    color: #66666644;
}

.feedback .card::after {
    content: "，";
    font-size: 80px;
    position: absolute;
    height: 50px;
    width: 50px;
    bottom: 50px;
    right: 10px;
    color: #66666644;
}

.feedback .card img {
    border-radius: 50%;
    width: 30px;
    height: 30px;
}
.feedback .card .name {
    display: flex;
    align-items: center;
    margin-top: 20px;
}
.feedback .card .name p {
    padding-left: 10px;
}
.extend-article {
    margin-top: 50px;
}
.extend-article img {
    height: 240px
}
.extend-article-title {
    width: fit-content;
    margin: auto;
    margin-bottom: 20px;
}
.extend-article-content h3 {
    font-size: 30px;
}
.extend-article-content .card  img {
    border: 1px solid #fff;
    border-radius: 0.25em;
    object-fit: cover;
    width: 100%;
    aspect-ratio: 16/9;
}
.extend-article-content p {
    color: #888;
    padding-top: 5px;
}
.extend-article-content .card {
    width: fit-content;
    max-width: 400px;
    box-sizing: border-box;
    margin: auto;
    margin-top: 20px;
}
.extend-article-content a:hover {
    color: #f55;
}


.links::before {
    background-color: #fff;
    display: block;
    content: "";
    height: 150px;
    margin: -31px;
    margin-bottom: 30px;
    border: 1px solid #fff;
    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 30% 30%, 0% 100%);
}
.links {
    background-color: #333;
    color: #fff;
    padding: 30px;
}
.links a {
    text-decoration: none;
    color: #fff;
}
.links a:hover {
    color: #f55;
}
.links ul {
    padding-top: 10px;
}
.links-head {
    display: flex;
    flex-wrap: wrap;
    padding-top: 10px;
}
.links .links-logo {
    margin-bottom: 20px;
}
.links-logo img {
    width: 50%;
    max-width: 274px;
}
.links-content .card {
    width: 170px;
    box-sizing: border-box;
    font-size: 14px;
}
.links-foot ul{
    display: flex;
    justify-content: center;
}
.links-foot li {
    padding: 20px;
    font-size: 22px;
    text-align: baseline;
}
.links-foot svg {
    width: 30px;
    height: 30px;
}
.links-foot a {
    opacity: .5;
}
.links-foot a:hover {
    opacity: 1;
    color: #ffffffee;
}
.footer {
    color: #fff;
    background-color: #000;
    width: 100%;
    font-size: 20px;
    text-align: center;
}

@media screen and (width >= 768px){
    .subject .row .col-md-6:nth-child(3) .card{
        margin-left: calc(100% - 125px);
    }
    .teacher .card {
        min-width: 492px;
    }
    .course-content .card {
        max-width: 400px;
    }
}
/* ... */

